Finalizando arquivo index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="body1">
     <div style=" text-align: center";>
     <h1 id="title">Atividade de Lógica Computacional</h1>
-    <p id="subtitle">Criar um programa que pergunte o nome e a idade da pessoa, e se tem comorbidade (S ou N). Mostrar a mensagem "Pode se vacinar!" caso a idade seja maior ou igual a 60 ou tenha comorbidade. Caso contrário, mostre a mensagem "Não pode se vacinar!"<br><br>
+    <p id="subtitle">Criar um programa que pergunte o nome e a idade da pessoa, e se tem comorbidade (S ou N). Mostrar a mensagem "Pode se vacinar!" caso a idade seja maior ou igual a 60 ou tenha comorbidade.<br> Caso contrário, mostre a mensagem "Não pode se vacinar!"<br><br>
     <button class="custom-button1" onclick="novaPagina()">Algoritmo em Java Script</button><br><br>
     <button class="custom-button2" onclick="novaPagina1()">Algoritmo em VisualG</button><br>
     </div>
