Finalizando arquivos html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Algoritmo 49</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body1">
+<body>
     <div style=" text-align: center";>
     <h1 id="title">Atividade de Lógica Computacional</h1>
     <p id="subtitle">Criar um programa que pergunte o nome e a idade da pessoa, e se tem comorbidade (S ou N). Mostrar a mensagem "Pode se vacinar!" caso a idade seja maior ou igual a 60 ou tenha comorbidade.<br> Caso contrário, mostre a mensagem "Não pode se vacinar!"<br><br>
