--- a/pseudocodigo.html
+++ b/pseudocodigo.html
@@ -7,7 +7,7 @@
     <title>Algoritmo 49</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body3">
+<body>
     <div style=" text-align: center";>
     <h1>Algoritmo em VisualG</h1>
     </div>
