--- a/algoritmo.html
+++ b/algoritmo.html
@@ -7,7 +7,7 @@
     <title>Algoritmo 49</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body2">
+<body>
     <div style=" text-align: center";>
     <h1>Algoritmo em Java Script</h1>
     </div>
